monitoring/pve-exporter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pve-exporter
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: pve-exporter
  replicas: 1
  template:
    metadata:
      labels:
        app: pve-exporter
    spec:
      containers:
        - name: pve-exporter
          image: prompve/prometheus-pve-exporter
---
kind: Service
apiVersion: v1
metadata:
  name: pve-exporter
  namespace: monitoring
spec:
  ports:
    - name: pve-exporter
      port: 9221
      targetPort: 9221
  selector:
    app: pve-exporter
